// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots ui/score/ProgressBar Mixte 1`] = `
<div
  className="flex gap-3 items-center justify-end"
>
  <div
    className="relative flex pt-1 min-w-[100px] min-h-[10px] transition-width duration-500 ease-in-out rounded-[4px]"
    style={
      Object {
        "backgroundColor": "#E5E5E5",
      }
    }
  >
    <div
      className="absolute min-h-full top-0 left-0 transition-width duration-500 ease-in-out rounded-[4px]"
      style={
        Object {
          "backgroundColor": "#34CB6A",
          "minWidth": "20%",
          "zIndex": 100,
        }
      }
    />
    <div
      className="absolute min-h-full top-0 left-0 transition-width duration-500 ease-in-out rounded-[4px]"
      style={
        Object {
          "backgroundColor": "#7AB1E8",
          "minWidth": "48%",
          "zIndex": 99,
        }
      }
    />
    <div
      className="absolute min-h-full top-0 left-0 transition-width duration-500 ease-in-out rounded-[4px]"
      style={
        Object {
          "backgroundColor": "#F95C5E",
          "minWidth": "68%",
          "zIndex": 98,
        }
      }
    />
  </div>
</div>
`;

exports[`Storyshots ui/score/ProgressBar Rien Renseigne 1`] = `
<div
  className="flex gap-3 items-center justify-end"
>
  <div
    className="relative flex pt-1 min-w-[100px] min-h-[10px] transition-width duration-500 ease-in-out rounded-[4px]"
    style={
      Object {
        "backgroundColor": "#E5E5E5",
      }
    }
  >
    <div
      className="absolute min-h-full top-0 left-0 transition-width duration-500 ease-in-out rounded-[4px]"
      style={
        Object {
          "backgroundColor": "#34CB6A",
          "minWidth": "0%",
          "zIndex": 100,
        }
      }
    />
    <div
      className="absolute min-h-full top-0 left-0 transition-width duration-500 ease-in-out rounded-[4px]"
      style={
        Object {
          "backgroundColor": "#7AB1E8",
          "minWidth": "0%",
          "zIndex": 99,
        }
      }
    />
    <div
      className="absolute min-h-full top-0 left-0 transition-width duration-500 ease-in-out rounded-[4px]"
      style={
        Object {
          "backgroundColor": "#F95C5E",
          "minWidth": "0%",
          "zIndex": 98,
        }
      }
    />
  </div>
</div>
`;

exports[`Storyshots ui/score/ProgressBar Tout Fait 1`] = `
<div
  className="flex gap-3 items-center justify-end"
>
  <div
    className="relative flex pt-1 min-w-[100px] min-h-[10px] transition-width duration-500 ease-in-out rounded-[4px]"
    style={
      Object {
        "backgroundColor": "#E5E5E5",
      }
    }
  >
    <div
      className="absolute min-h-full top-0 left-0 transition-width duration-500 ease-in-out rounded-[4px]"
      style={
        Object {
          "backgroundColor": "#34CB6A",
          "minWidth": "100%",
          "zIndex": 100,
        }
      }
    />
    <div
      className="absolute min-h-full top-0 left-0 transition-width duration-500 ease-in-out rounded-[4px]"
      style={
        Object {
          "backgroundColor": "#7AB1E8",
          "minWidth": "100%",
          "zIndex": 99,
        }
      }
    />
    <div
      className="absolute min-h-full top-0 left-0 transition-width duration-500 ease-in-out rounded-[4px]"
      style={
        Object {
          "backgroundColor": "#F95C5E",
          "minWidth": "100%",
          "zIndex": 98,
        }
      }
    />
  </div>
</div>
`;
